--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
             <div class="intro">
                 <h2>Read the Deal</h2>
-                <p>Explore the full text of the Trans-Pacific Partnership, along with convenient<br>chapter summaries, on <a href="http://medium.com/the-trans-pacific-partnership">Medium</a>.</p>
+                <p>Explore the full text of the Trans-Pacific Partnership, along with convenient<br>chapter summaries, on <a href="https://web.archive.org/web/20170117050539/https://medium.com/the-trans-pacific-partnership">Medium</a>.</p>
             </div>
             <div class="table">
 
